kubernetes/apps/default/firefly/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly
  annotations:
    gethomepage.dev/description: "Personal finance manager"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "mdi-cash-multiple"
    gethomepage.dev/name: "Firefly III"
spec:
  hostnames:
    - "firefly.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: firefly
          port: 8080
